--- a/src/components/utility/badgePicker/badgeFilterDraw/_badgeFilterDraw.scss
+++ b/src/components/utility/badgePicker/badgeFilterDraw/_badgeFilterDraw.scss
@@ -3,12 +3,12 @@
 
 .badge-filter-draw {
   width: 100%;
-  height: 175px;
   position: absolute;
-  bottom: -214px;
+  bottom: -224.75px;
   background: white;
   z-index: 5;
   padding: 18px 12px;
+  box-sizing: border-box;
   transition: variables.$trans-speed;
   @include mixins.flexbox-space-between-column;
   border-top: 2px solid variables.$background;
@@ -26,11 +26,12 @@
   .badge-filter-options {
     @include mixins.flexbox;
     flex-wrap: wrap;
+    margin-bottom: 20px
   }
 
   .badge-filter-buttons {
-    @include mixins.flexbox-space-between;
-    padding: 20px 7.5%;
+    @include mixins.flexbox;
+    margin-bottom: 10px;
   }
 }
 
