--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -66,7 +66,8 @@ body {
 
       .content-container {
         width: 100%;
-        @include mixins.flexbox-start-column;
+        @include mixins.flexbox-space-between-column;
+        flex-grow: 1;
         z-index: 0;
         overflow-y: auto;
         padding: 20px 0;
@@ -133,12 +134,12 @@ body {
           width: 100%;
           @include mixins.flexbox-space-between-column;
           flex-grow: 1;
-          padding-top: 20px;
+          padding: 20px 0;
 
           form {
             width: 100%;
             @include mixins.flexbox-column;
-            padding: 60px 7.5% 20px;
+            padding: 0 7.5%;
             box-sizing: border-box;
           }
 
@@ -178,7 +179,7 @@ body {
         .sign-up-container {
           width: 100%;
           @include mixins.flexbox;
-          padding: 20px 0;
+          padding-bottom: 20px;
 
           :first-child {
             pointer-events: none;
@@ -201,6 +202,7 @@ body {
       
       .content-container {
         padding: 0;
+        justify-content: start;
       }
     }
 
